--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </style>
 </head>
 <body>
-    <a class="button" href="http://bbs.mchad.icu">进入</a>
-    <a class="button" onclick="openQQGroup()" >按钮2</a>
-    <a class="button" href="网站3的URL">按钮3</a>
-    <a class="button" href="网站4的URL">按钮4</a>
+    <a class="button" href="http://bbs.mchad.icu">进入论坛</a>
+    <a class="button" onclick="openQQGroup()" >未完成</a>
+    <a class="button" href="网站3的URL">未完成</a>
+    <a class="button" href="网站4的URL">未完成</a>
 <script>
         function openQQGroup() {
             var qqGroupLink = 'https://qun.qq.com/363139179'; // 替换成您的QQ群聊链接
