--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         .button {
             display: inline-block;
             padding: 15px 30px;
-            margin: 20px;
+            margin: 10px;
             border-radius: 100px;
-            background-color: purple;
+            background-color: black;
             color: white;
             text-decoration: none;
             font-family: Arial, sans-serif;
