--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </style>
 </head>
 <body>
-    <a class="button" href="http://bbs.mchad.icu">进入论坛</a>
-    <a class="button" onclick="openQQGroup()" >未完成</a>
+    <a class="button" href="http://cflms.mchad.icu">进入论坛</a>
+    <a class="button" href=http://craftbbs.top >程哥的MC论坛</a>
     <a class="button" href="网站3的URL">未完成</a>
     <a class="button" href="网站4的URL">未完成</a>
 <script>
