--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             padding: 20px;
         }
         .button {
-            background-color: #800080;
+            background-color: rgba(128, 0, 128, 0.5);
             color: white;
             padding: 10px 20px;
             border-radius: 20px;
@@ -34,7 +34,7 @@
             transition: all 0.3s ease;
         }
         .button:hover {
-            background-color: #660066;
+            background-color: rgba(102, 0, 102, 0.5);
         }
     </style>
     <title>Button Page</title>
