--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('fnd.jpg');
+            background-image: url('');
             background-size: cover;
             background-position: center;
             height: 100vh;
