--- a/index.html
+++ b/index.html
@@ -1,50 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-image: url('');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            align-items: center;
-        }
-        .button-container {
-            display: flex;
-            justify-content: space-around;
-            width: 100%;
-            background-color: rgba(128, 0, 128, 0.7);
-            padding: 20px;
-        }
-        .button {
-            background-color: rgba(128, 0, 128, 0.5);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 20px;
-            text-decoration: none;
-            text-align: center;
-            margin: 0 10px;
-            transition: all 0.3s ease;
-        }
-        .button:hover {
-            background-color: rgba(102, 0, 102, 0.5);
-        }
-    </style>
+ <head>
     <title>Button Page</title>
 </head>
 <body>
-    <div class="button-container">
-        <a class="button" href="http://cflms.mchad.icu">进入论坛</a>
-        <a class="button" href="http://craftbbs.top">MC论坛</a>
-        <a class="button" href="https://docs.qq.com/doc/DRk5IdklheU5GZFdV">论坛坛规</a>
-        <a class="button" href="http://bbs.mchad.icu">备用通道</a>
-    </div>
+    <h1>欢迎来到海晶仓库，我娇贵的小公主</h1>
+    <h2>该仓库所有资源仅供测试</h2>
+    <h1>由于下载源问题，国内下载可能出现较慢问题</h1>
 </body>
 </html>
