--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="text">这是一行文字</div>
     <a class="button" href="指定URL">文字圆角矩形按钮</a>
     <div class="bottom-buttons">
-        <a class="bottom-button" href="指定URL1">按钮1</a>
-        <a class="bottom-button" href="指定URL2">按钮2</a>
-        <a class="bottom-button" href="指定URL3">按钮3</a>
-        <a class="bottom-button" href="指定URL4">按钮4</a>
+        <a class="bottom-button" href="指定URL1">官方论坛</a>
+        <a class="bottom-button" href="指定URL2">海晶仓库</a>
+        <a class="bottom-button" href="指定URL3">B站主页</a>
+        <a class="bottom-button" href="指定URL4">联系我们</a>
     </div>
 </body>
 </html>
