--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="text">这是一行文字</div>
     <a class="button" href="指定URL">文字圆角矩形按钮</a>
     <div class="bottom-buttons">
-        <a class="bottom-button" href="指定URL1">官方论坛</a>
+        <a class="bottom-button" href="指定URL1">团队介绍</a>
         <a class="bottom-button" href="指定URL2">海晶仓库</a>
         <a class="bottom-button" href="指定URL3">B站主页</a>
         <a class="bottom-button" href="指定URL4">联系我们</a>
