--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
     <h3>版本信息</h3>
     <p>版本和版本JSON以及AssetsIndex：</p>
     <ul>
-        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest.json">http://launchermeta.mojang.com/mc/game/version_manifest.json</a> -> <a href="https://res.craftbbs.xyz/version_manifest.json">https://res.craftbbs.xyz/version_manifest.json</a></li>
-        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest_v2.json">http://launchermeta.mojang.com/mc/game/version_manifest_v2.json</a> -> <a href="https://res.craftbbs.xyz/version_manifest_v2.json">https://res.craftbbs.xyz/version_manifest_v2.json</a></li>
+        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest.json">http://launchermeta.mojang.com/mc/game/version_manifest.json</a> -> <a href="https://download.craftbbs.com/version_manifest.json">https://download.craftbbs.com/version_manifest.json</a></li>
+        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest_v2.json">http://launchermeta.mojang.com/mc/game/version_manifest_v2.json</a> -> <a href="https://download.craftbbs.com/version_manifest_v2.json">https://download.craftbbs.com/version_manifest_v2.json</a></li>
     </ul>
     <h3>Assets</h3>
     <ul>
-        <li><a href="http://resources.download.minecraft.net">http://resources.download.minecraft.net</a> -> <a href="https://res.craftbbs.xyz/assest/">https://res.craftbbs.xyz/assest/</a></li>
+        <li><a href="http://resources.download.minecraft.net">http://resources.download.minecraft.net</a> -> <a href="https://download.craftbbs.com/assest/">https://download.craftbbs.com/assest/</a></li>
     </ul>
     <h3>Libraries</h3>
     <ul>
-        <li><a href="https://libraries.minecraft.net/">https://libraries.minecraft.net/</a> -> <a href="https://res.craftbbs.xyz/">https://res.craftbbs.xyz/</a></li>
+        <li><a href="https://libraries.minecraft.net/">https://libraries.minecraft.net/</a> -> <a href="https://download.craftbbs.com/">https://download.craftbbs.com/</a></li>
     </ul>
     <h3>Mojang java</h3>
     <ul>
-        <li><a href="https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json">https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json</a> -> <a href="https://res.craftbbs.xyz/all.json">https://res.craftbbs.xyz/all.json</a></li>
+        <li><a href="https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json">https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json</a> -> <a href="https://download.craftbbs.com/all.json">https://download.craftbbs.com/all.json</a></li>
     </ul>
     <h3>Forge</h3>
     <p><a href="https://files.minecraftforge.net/maven">https://files.minecraftforge.net/maven</a> - 当前开发中</p>
