--- a/index.html
+++ b/index.html
@@ -1,144 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMCL API使用文档 beta v0.1</title>
-    <style>
-        body {
-            font-family: '微软雅黑', sans-serif;
-            line-height: 1.5;
-            margin: 20px;
-            color: #080f17;
-            background-color: #f9f9f9;
-        }
-        h1, h2 {
-            color: #080f17;
-            margin-top: 20px;
-        }
-        h1 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        h2 {
-            font-size: 20px;
-            font-weight: bold;
-        }
-        p {
-            font-size: 14px;
-            margin: 10px 0;
-        }
-        a {
-            color: #0a6cff;
-            text-decoration: underline;
-        }
-        a:hover {
-            text-decoration: none;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        .sponsor-info {
-            border-top: 1px solid #e2e6ed;
-            padding-top: 10px;
-            margin-top: 20px;
-        }
-        .contact-info {
-            margin-top: 20px;
-        }
-    </style>
+    <meta http-equiv="refresh" content="3;url=https://www.example.com">
 </head>
 <body>
-
-<header>
-    <h1>CMCL API使用文档 beta v0.1</h1>
-</header>
-
-<section>
-    <h2>关于CMCL API</h2>
-    <p>CMCL API是@海晶鱼（QQ:2735209779）开发，CraftBBS（<a href="https://craftbbs.com">craftbbs.com</a>）推广的一款Minecraft游戏本体下载镜像站。与MCBBS源和BMCLAPI类似。</p>
-    <p>CMCLAPI当前正处于公测阶段，目前开放Minecraft游戏本体下载以及assets游戏文件下载。</p>
-</section>
-
-<section class="sponsor-info">
-    <h2>赞助</h2>
-    <p>二维码是自愿赞助，基本每人每月捐2元CMCL就能维持下去。如果有额外费用，将会用于搭建更多的节点。就算不捐，站长也会自费维护下载源。</p>
-    <table>
-        <tr>
-            <td><img src="2.jpeg" alt="赞助二维码1"></td>
-            <td><img src="1.png" alt="赞助二维码2"></td>
-        </tr>
-    </table>
-    <p>知道自己是废物竞争不过BMCL，所以就没搞那么繁琐。我反正照着BMCLAPI一个个文件都下过来了，别的文件有可能会缺。所以如果有这类问题，请反馈给我。</p>
-</section>
-
-<section class="contact-info">
-    <h2>联系方式</h2>
-    <p>QQ邮箱：<a href="mailto:2735209776@qq.com">2735209776@qq.com</a></p>
-    <p>Outlook邮箱：<a href="mailto:lastmilk@outlook.com">lastmilk@outlook.com</a></p>
-</section>
-
-<section>
-    <h2>目标</h2>
-    <p>start date：2024 Mon Nov 18</p>
-    <h3>短期目标（一年内实现）：</h3>
-    <ul>
-        <li>把API做到能用（已经达成）</li>
-        <li>把网络安全体系建起来</li>
-        <li>被小部分启动器采用</li>
-        <li>把forge，fabric，optifine啥的都做出来</li>
-    </ul>
-    <h3>中期目标（两年内实现）：</h3>
-    <ul>
-        <li>建立自己的维护团队，拉到至少3个赞助商</li>
-        <li>把分发节点建起来</li>
-        <li>下载速度比肩BMCLAPI</li>
-    </ul>
-    <h3>长期目标（五年内实现）：</h3>
-    <ul>
-        <li>成为新一代国人MC游戏本体下载主流镜像站</li>
-    </ul>
-</section>
-
-<section>
-    <h2>食用</h2>
-    <h3>版本信息</h3>
-    <p>版本和版本JSON以及AssetsIndex：</p>
-    <ul>
-        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest.json">http://launchermeta.mojang.com/mc/game/version_manifest.json</a> -> <a href="https://download.craftbbs.com/version_manifest.json">https://download.craftbbs.com/version_manifest.json</a></li>
-        <li><a href="http://launchermeta.mojang.com/mc/game/version_manifest_v2.json">http://launchermeta.mojang.com/mc/game/version_manifest_v2.json</a> -> <a href="https://download.craftbbs.com/version_manifest_v2.json">https://download.craftbbs.com/version_manifest_v2.json</a></li>
-    </ul>
-    <h3>Assets</h3>
-    <ul>
-        <li><a href="http://resources.download.minecraft.net">http://resources.download.minecraft.net</a> -> <a href="https://download.craftbbs.com/assest/">https://download.craftbbs.com/assest/</a></li>
-    </ul>
-    <h3>Libraries</h3>
-    <ul>
-        <li><a href="https://libraries.minecraft.net/">https://libraries.minecraft.net/</a> -> <a href="https://download.craftbbs.com/">https://download.craftbbs.com/</a></li>
-    </ul>
-    <h3>Mojang java</h3>
-    <ul>
-        <li><a href="https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json">https://launchermeta.mojang.com/v1/products/java-runtime/2ec0cc96c44e5a76b9c8b7c39df7210883d12871/all.json</a> -> <a href="https://download.craftbbs.com/all.json">https://download.craftbbs.com/all.json</a></li>
-    </ul>
-    <h3>Forge</h3>
-    <p><a href="https://files.minecraftforge.net/maven">https://files.minecraftforge.net/maven</a> - 当前开发中</p>
-    <h3>Liteloader</h3>
-    <p><a href="http://dl.liteloader.com/versions/versions.json">http://dl.liteloader.com/versions/versions.json</a> - 当前开发中</p>
-    <h3>Optifine</h3>
-    <p>请遵照API，无官方结构</p>
-    <h3>authlib-injector</h3>
-    <p>当前开发中</p>
-    <h3>fabric</h3>
-    <p>当前开发中</p>
-    <h3>quilt</h3>
-    <p>由于上游API存在bug，暂时不可用</p>
-</section>
-
+    <p>尊敬的CraftBBS用户，正在为您跳转至主站...</p>
 </body>
 </html>
