--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta http-equiv="refresh" content="3;url=https://www.example.com">
+    <meta http-equiv="refresh" content="3;url=https://www.craftbbs.com">
 </head>
 <body>
     <p>尊敬的CraftBBS用户，正在为您跳转至主站...</p>
